<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nsView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="test.gspann.storagescanner.ScannerFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <Button
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_scan"/>
        <TextView
            android:id="@+id/tvScanningStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal"/>

        <RelativeLayout
            android:id="@+id/rlScanningResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvScanningResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="13sp"
                android:textColor="@color/black87"
                android:layout_centerHorizontal="true"
                android:text="@string/scanning_results"/>
            <TextView
                android:id="@+id/tvAverageFileSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvScanningResults"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:textSize="13sp"
                android:textColor="@color/black87"
                android:layout_gravity="center_horizontal"
                android:text="@string/average_file_size"/>

            <TextView
                android:id="@+id/tvTopFiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAverageFileSize"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:textSize="13sp"
                android:textColor="@color/black87"
                android:layout_gravity="center_horizontal"
                android:text="@string/top_files"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcLargestFiles"
                android:layout_margin="8dp"
                android:layout_below="@id/tvTopFiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvFreqExt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rcLargestFiles"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:textSize="13sp"
                android:textColor="@color/black87"
                android:layout_gravity="center_horizontal"
                android:text="@string/frequent_extensions"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcFrequentExtensions"
                android:layout_margin="8dp"
                android:layout_below="@id/tvFreqExt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
